--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  font-family: 'Open Sans', sans-serif;
+  padding-left: 100px;
+  background-color: #f2f2f2;
+  min-width: 100%;
   min-height: 100vh;
+}
+
+
+.Auth {
+  width: 100vw;
+  height: 100vh;
+  background-image: -webkit-linear-gradient(351deg,#ff70a6,#ff9770 40%,#ffd670 73%,#e9ff70);
+  background-image: -o-linear-gradient(351deg,#ff70a6,#ff9770 40%,#ffd670 73%,#e9ff70);
+  background-image: linear-gradient(99deg,#ff70a6,#ff9770 40%,#ffd670 73%,#e9ff70);
+  position: absolute;
+  top: 0;
+  left: 0;
+  -ms-flex-pack: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.auth_container {
+  border-radius: 8px;
+  -webkit-box-shadow: 0 14px 28px 0 rgba(0,0,0,.25), 0 10px 10px 0 rgba(0,0,0,.26);
+  box-shadow: 0 14px 28px 0 rgba(0,0,0,.25), 0 10px 10px 0 rgba(0,0,0,.26);
+  background-image: -webkit-linear-gradient(353deg,#ff7a6e,#ffd670);
+  background-image: -o-linear-gradient(353deg,#ff7a6e,#ffd670);
+  background-image: linear-gradient(97deg,#ff7a6e,#ffd670);
+  width: 35vw;
+  height: 55vh;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav {
+  width: 100px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-top: 20px;
+  color: #fff;
+  background-image: -webkit-gradient(linear,left bottom,left top,from(#ff7abe),to(#ff9770));
+  background-image: -webkit-linear-gradient(bottom,#ff7abe,#ff9770);
+  background-image: -o-linear-gradient(bottom,#ff7abe,#ff9770);
+  background-image: linear-gradient(0deg,#ff7abe,#ff9770);
+  -webkit-box-shadow: 10px 0 20px 0 rgba(0,0,0,.1), 5px 0 5px rgba(0,0,0,.2);
+  box-shadow: 10px 0 20px 0 rgba(0,0,0,.1), 5px 0 5px rgba(0,0,0,.2);
 }
+
