--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,29 @@
   box-shadow: 10px 0 20px 0 rgba(0,0,0,.1), 5px 0 5px rgba(0,0,0,.2);
 }
 
+.content_box {
+  border-radius: 2px;
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: column;
+}
+
+.post-summary {
+  width: 500px;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 10px 0px 0px 100px;
+    display:flex;
+    border: 1px solid;
+    box-sizing: border-box;
+    padding: 5px
+}
+
+.info{
+  display: flex;
+  align-items:flex-end;
+}
